--- a/app/css/sb-pro-v-1-0-0.css
+++ b/app/css/sb-pro-v-1-0-0.css
@@ -1,3 +1,50 @@
+/* ===================================================
+sb-reset
+====================================================*/
+body, html {
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+}
+div, p, a, ul, li, span, table, tr, td, h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+  padding: 0;
+}
+div {
+  box-sizing: border-box;
+}
+a, a:hover {
+  text-decoration: none;
+  color: #00449C;
+}
+
+/* ===================================================
+sb-table
+====================================================*/
+.sb-table {
+  display: table;
+  width: 100%;
+  height: 100%;
+}
+.sb-table-row {
+  display: table-row;
+  width: 100%;
+  height: 0;
+}
+.sb-table .sb-table-row:nth-child(2) {
+  height: 100%;
+}
+.sb-cell {
+  display: table-cell;
+  width: 100%;
+  heigh: 100%;
+}
+
+/* ===================================================
+sb-atomic
+====================================================*/
 .sb-row-100 {
   width: 100%;
   height: 100px;
