--- a/app/css/sb-pro-v-1-0-0.css
+++ b/app/css/sb-pro-v-1-0-0.css
@@ -33,7 +33,7 @@ sb-table
   width: 100%;
   height: 0;
 }
-.sb-table .sb-table-row:nth-child(2) {
+.sb-table-row-content {
   height: 100%;
 }
 .sb-cell {
